--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,12 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
       - name: Install Python dependencies
-        run: pip install -r python-tests/requirements.txt
+        run: |
+          pip install -r python-tests/requirements.txt
+          pip install webdriver-manager
+
       - name: Run Python test
         run: PYTHONPATH=. python3 python-tests/test_saucedemo.py
 
@@ -23,11 +28,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+
       - name: Install Playwright dependencies
         run: cd playwright-tests && npm install
+
+      - name: Install Playwright browsers
+        run: cd playwright-tests && npx playwright install
+
       - name: Run Playwright tests
         run: cd playwright-tests && npx playwright test
