--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,9 +15,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - name: Install Playwright dependencies
+      -       - name: Install Playwright dependencies
         run: cd playwright-tests && npm install
+
       - name: Install only Chromium browser
         run: cd playwright-tests && npx playwright install chromium
+
       - name: Run Playwright tests
         run: cd playwright-tests && npx playwright test
+        env:
+          SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
+          SAUCE_PASSWORD: ${{ secrets.SAUCE_PASSWORD }}
+
